syntax = "proto3";

package api.realtime_analytics.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/realtime_analytics/v1;v1";

// 实时分析服务，提供系统层面的销售、活跃度指标监控及实时埋点接收。
service RealtimeAnalytics {
  // 获取当前实时的总成交额、订单量等关键销售指标。
  rpc GetRealtimeSalesMetrics(GetRealtimeSalesMetricsRequest) returns (RealtimeSalesMetricsResponse);

  // 获取当前全站在线人数、新注册用户等活跃度数据。
  rpc GetRealtimeUserActivity(GetRealtimeUserActivityRequest) returns (RealtimeUserActivityResponse);

  // 接收并立即处理用户的行为埋点事件。
  rpc RecordUserBehavior(RecordUserBehaviorRequest) returns (RecordUserBehaviorResponse);
}

// 销售实时指标。
message RealtimeSalesMetrics {
  // 当前总成交额。
  uint64 current_gmv = 1;
  // 当前总订单笔数。
  uint32 current_orders = 2;
  // 实时在线/活跃用户总数。
  uint32 active_users = 3;
  // 指标最后刷新时间。
  google.protobuf.Timestamp last_updated = 4;
}

// 用户活跃度实时数据。
message RealtimeUserActivity {
  // 实时在线会话数。
  uint32 online_users = 1;
  // 近一小时新增注册数。
  uint32 new_users_last_hour = 2;
  // 各核心页面的分钟级访问量 (PV)。
  map<string, uint32> page_views_per_minute = 3;
}

// 销售指标请求。
message GetRealtimeSalesMetricsRequest {}

// 销售指标响应。
message RealtimeSalesMetricsResponse {
  // 指标实体。
  RealtimeSalesMetrics metrics = 1;
}

// 活跃度请求。
message GetRealtimeUserActivityRequest {}

// 活跃度响应。
message RealtimeUserActivityResponse {
  // 活跃度实体。
  RealtimeUserActivity activity = 1;
}

// 埋点记录请求。
message RecordUserBehaviorRequest {
  // 用户 ID。
  string user_id = 1;
  // 动作类别。
  string behavior_type = 2;
  // 操作对象 ID。
  string item_id = 3;
  // 携带的上下文特征。
  map<string, string> properties = 4;
  // 事件发生时间点。
  google.protobuf.Timestamp event_time = 5;
}

// 埋点记录响应。
message RecordUserBehaviorResponse {
  // 是否成功接收。
  bool success = 1;
  // 结果说明。
  string message = 2;
}
